--- a/trunk/src/app/views/account/account-scene.html
+++ b/trunk/src/app/views/account/account-scene.html
@@ -85,6 +85,20 @@
                 </div>
             </div>
 
+            <div class="palm-row" x-mojo-tap-highlight="momentary">
+                <div class="palm-row-wrapper">
+                    <table class="palm-list-section-label">
+                        <tr>
+                            <td><span class="palm-text-wrapper" x-mojo-loc="">Stall Recovery</span></td>
+
+                            <td>
+                                <div id="stall-toggle" x-mojo-element="ToggleButton" class="toggle-text"></div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
             <div class="palm-row last" x-mojo-tap-highlight="momentary">
                 <div class="palm-row-wrapper">
                     <span class="palm-text-wrapper" x-mojo-loc="">List Fetch Size</span>
