--- a/trunk/src/app/views/artists/divider.html
+++ b/trunk/src/app/views/artists/divider.html
@@ -1,5 +1,3 @@
-<div class="palm-divider solid extend-alpha">
-<div class="palm-alpha-divider palm-dark extended-alpha">
+<div class="palm-divider alpha">
   <div>#{dividerLabel}</div>
-</div>
 </div>
