--- a/trunk/src/app/views/search-menu/search-menu-scene.html
+++ b/trunk/src/app/views/search-menu/search-menu-scene.html
@@ -6,28 +6,42 @@
                     <span x-mojo-loc=''>Now Playing</span>
                 </div>
             </div>
+
             <div class='header-body'>
-                <div class='icon'><img class="icon-img" src='images/icons/search.png'/></div>
-                <div class="scene-title truncating-text" id="title" x-mojo-loc=''>Search</div>
+                <div class='icon'><img class="icon-img" src='images/icons/search.png'></div>
+
+                <div class="scene-title truncating-text" id="title" x-mojo-loc=''>
+                    Search
+                </div>
             </div>
         </div>
-    </div>  
+    </div>
+
     <div id="spacerDiv" class="music-header-spacer"></div>
-    
+
     <div id="search-group" class="palm-group unlabeled mainMenuList">
         <div id="search-list" class="palm-list">
             <div class="palm-row first">
-                <div class="palm-row-wrapper textfield-group"  x-mojo-focus-highlight="true">    
+                <div class="palm-row-wrapper textfield-group" x-mojo-focus-highlight="true">
                     <div class="title">
-                            <!--<div class="icon search left"><img class="mainMenuIcon" src="images/icons/search.png"></div>                                       -->
-                            <span class="search-term-find" x-mojo-loc=''>Find...</span>
-                            <div id="search-field" class="search-test" x-mojo-element="TextField"></div>
+                        <!--<div class="icon search left"><img class="mainMenuIcon" src="images/icons/search.png"></div>                                       -->
+                        <span class="search-term-find" x-mojo-loc=''>Find...</span>
+
+                        <div id="search-field" class="search-test" x-mojo-element="TextField"></div>
                     </div>
-                </div>
-                
-                <!--<div class="palm-row-wrapper textfield-group" x-mojo-focus-highlight="true">-->
+
+                    <div id="notifyuser-back" class="notifyuser-back">
+                        <div class="search-back-text">
+                            Press
+                        </div>
+                        <div class="search-back-icon"></div>
+                        <div class="search-back-text">
+                            again to exit
+                        </div>
+                    </div>
+                </div><!--<div class="palm-row-wrapper textfield-group" x-mojo-focus-highlight="true">-->
                 <!--    <div class="title">-->
-                <!--        <!--<div class="image">-->
+                <!--        <!==<div class="image">-->
                 <!--            <img class="mainMenuIcon" src="images/icons/search.png">-->
                 <!--            </img>-->
                 <!--        </div>-->
@@ -36,62 +50,62 @@
                 <!--    </div>-->
                 <!--</div>-->
             </div>
-            
-            <div class="palm-row" id='searchArtists' x-Mojo-tap-highlight="momentary">
+
+            <div class="palm-row" id='searchArtists' x-mojo-tap-highlight="momentary">
                 <div class="palm-row-wrapper">
                     <div class="mainMenuLeft">
-                        <div class="mainMenuTitle">Artists</div>
+                        <div class="mainMenuTitle">
+                            Artists
+                        </div>
                     </div>
-                    <div class="search-icon">
-                        <img class="mainMenuIcon" src="images/icons/artists.png"></img>
-                    </div>
-                    <div class="search-enter">
-                        <img  id="search-Artists" ></img>
-                    </div>
-                </div>
-            </div>
-            <div class="palm-row" id='searchAlbums' x-Mojo-tap-highlight="momentary">
-                <div class="palm-row-wrapper">
-                    <div class="mainMenuLeft">
-                        <div class="mainMenuTitle">Albums</div>
-                    </div>
-                    <div class="search-icon">
-                        <img class="mainMenuIcon" src="images/icons/albums.png"></img>  
-                    </div>
-                    <div class="search-enter">
-                        <img  id="search-Albums"></img>
-                    </div>
-                </div>
-            </div>
-            <div class="palm-row" id='searchSongs' x-Mojo-tap-highlight="momentary">
-                <div class="palm-row-wrapper">
-                    <div class="mainMenuLeft">
-                        <div class="mainMenuTitle">Songs</div>
-                    </div>
-                    <div class="search-icon">
-                        <img class="mainMenuIcon" src="images/icons/songs.png"></img>
-                    </div>
-                    <div class="search-enter">
-                        <img  id="search-Songs"></img>
-                    </div>
+
+                    <div class="search-icon"><img class="mainMenuIcon" src="images/icons/artists.png"></div>
+
+                    <div class="search-enter"><img id="search-Artists" name="search-Artists"></div>
                 </div>
             </div>
 
-            <div class="palm-row" id='searchPlaylists' x-Mojo-tap-highlight="momentary">
+            <div class="palm-row" id='searchAlbums' x-mojo-tap-highlight="momentary">
                 <div class="palm-row-wrapper">
                     <div class="mainMenuLeft">
-                        <div class="mainMenuTitle">Playlists</div>
+                        <div class="mainMenuTitle">
+                            Albums
+                        </div>
                     </div>
-                    <div class="search-icon">
-                        <img class="mainMenuIcon" src="images/icons/playlists.png"></img>
-                         
-                    </div>
-                    <div class="search-enter">
-                        <img id="search-Playlists"></img>
-                    </div>
+
+                    <div class="search-icon"><img class="mainMenuIcon" src="images/icons/albums.png"></div>
+
+                    <div class="search-enter"><img id="search-Albums" name="search-Albums"></div>
                 </div>
             </div>
-            <!--
+
+            <div class="palm-row" id='searchSongs' x-mojo-tap-highlight="momentary">
+                <div class="palm-row-wrapper">
+                    <div class="mainMenuLeft">
+                        <div class="mainMenuTitle">
+                            Songs
+                        </div>
+                    </div>
+
+                    <div class="search-icon"><img class="mainMenuIcon" src="images/icons/songs.png"></div>
+
+                    <div class="search-enter"><img id="search-Songs" name="search-Songs"></div>
+                </div>
+            </div>
+
+            <div class="palm-row" id='searchPlaylists' x-mojo-tap-highlight="momentary">
+                <div class="palm-row-wrapper">
+                    <div class="mainMenuLeft">
+                        <div class="mainMenuTitle">
+                            Playlists
+                        </div>
+                    </div>
+
+                    <div class="search-icon"><img class="mainMenuIcon" src="images/icons/playlists.png"></div>
+
+                    <div class="search-enter"><img id="search-Playlists" name="search-Playlists"></div>
+                </div>
+            </div><!--
             <div class="palm-row" id='searchGenres' x-Mojo-tap-highlight="momentary">
                 <div class="palm-row-wrapper">
                     <div class="mainMenuLeft">
@@ -107,22 +121,20 @@
                     </div>
                 </div>
             </div>-->
-            <div class="palm-row last" id='searchGlobal' x-Mojo-tap-highlight="momentary">
+
+            <div class="palm-row last" id='searchGlobal' x-mojo-tap-highlight="momentary">
                 <div class="palm-row-wrapper">
                     <div class="mainMenuLeft">
-                        <div class="mainMenuTitle">Global</div>
+                        <div class="mainMenuTitle">
+                            Global
+                        </div>
                     </div>
-                    <div class="search-icon">
-                        <img class="mainMenuIcon" src="images/icons/global.png"></img>
-                          
-                    </div>
-                    <div class="search-enter">
-                        <img  id="search-Global"></img>
-                    </div>
-                     
+
+                    <div class="search-icon"><img class="mainMenuIcon" src="images/icons/global.png"></div>
+
+                    <div class="search-enter"><img id="search-Global" name="search-Global"></div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
