--- a/trunk/src/stylesheets/main.css
+++ b/trunk/src/stylesheets/main.css
@@ -18,6 +18,12 @@
     along with Ampache Mobile.  If not, see <http://www.gnu.org/licenses/>.
 */
 
+/***********************************************/
+/*   Global CSS
+/**********************************************/
+.palm-scrim{
+    z-index:10000; 
+}
 
 html, body {
 height: 100%;
@@ -48,15 +54,15 @@ a:link {
         background-repeat:no-repeat;
 }
 
-#ampache-main
-{
-  width: 100%;
-  margin: 0 0 0 0;
-  clear: both;
-  z-index: 1;
-  position: relative;
-  text-align: left;
-}
+/*#ampache-main*/
+/*{*/
+/*  width: 100%;*/
+/*  margin: 0 0 0 0;*/
+/*  clear: both;*/
+/*  z-index: 1;*/
+/*  position: relative;*/
+/*  text-align: left;*/
+/*}*/
 
 
 
@@ -870,7 +876,10 @@ body.palm-default {
 }
 
 
-
+.artist-header-spacer {
+  height: 55px;
+  width: 100%;
+}
 
 
 
@@ -1061,6 +1070,11 @@ margin-left:10px;
         position:fixed;
         top:50px;
         width:100%;
+        /*display:none;*/
+}
+
+#list-display{
+    /*display:none;*/
 }
 
 .loaded-display
@@ -1140,6 +1154,42 @@ margin-left:10px;
     height:24px;
 }
 
+.notifyuser-back
+{
+    font-size:14px;
+    /*border:solid;*/
+    height:14px;
+    /*width:130px;*/
+    top: 80px;
+    right: 20px;
+    position:absolute;
+    display:none;
+    
+}
+
+.search-back-icon{
+    background: url(../images/back.png) center left no-repeat;
+    height:13px;
+    width:13px;
+    -webkit-background-size : 100%;
+    float:left;
+    vertical-align:bottom;
+    display:inline;
+    position:relative;
+    bottom:-3px;
+    opacity:0.4;
+    
+}
+
+.search-back-text{
+    float:left;
+    height:inherit;
+    vertical-align:middle;
+    margin:0px 3px 0px 3px;
+    font-weight:bold;
+    opacity:0.4;
+}
+
 /***********************************************/
 /*   Text Selector Scene
 /**********************************************/
@@ -1150,6 +1200,7 @@ margin-left:10px;
     position:relative;
     margin-bottom:-10px;
     margin-top:10px;
+    
 }
 
 #use-color-group{
@@ -1165,3 +1216,21 @@ margin-left:10px;
     height:480px;
     -webkit-background-size : 100%;
 }
+
+/***********************************************/
+/*   Whats New Scene
+/**********************************************/
+.new-version-header{
+   font-size:small;
+   font-weight:bold;
+}
+
+.new-version-list
+{
+    font-size:small;
+    margin-left:-15px;
+}
+
+.collapsor {
+	overflow: hidden; 
+}   
