--- a/trunk/src/app/views/whatsnew/new-version.html
+++ b/trunk/src/app/views/whatsnew/new-version.html
@@ -12,7 +12,7 @@
 
          <li style="list-style: none; display: inline">
              <ul class="new-version-list">
-                 <li>Find Arists, Albums and Songs recently added to your server</li>
+                 <li>Find Artists, Albums and Songs recently added to your server</li>
                 <li>Choices include: Last Update, 1 Week, 1 Month, Custom Date</li>
                  <li>Tap and hold from main menu for quick access, timespan configurable in preferences</li>
                  <li>NOTE: This is the date files where scanned into your server, not the timestamps on the files.  It will be most useful for servers that have been running awhile and have had music added periodically.</li>
@@ -114,7 +114,7 @@
      <ul class="new-version-list">
          <li>Tap and hold an Artist to skip the albums screen and go straight to all songs.</li>
         <li>Many optimizations to Now Playing screen, should improve performance</li>
-         <li>Numerous formating fixes</li>
+         <li>Numerous formatting fixes</li>
          <li>Release Notes Link in About</li>
          <li>Added time countdown to now playing playlist.</li>
          <li>Added new icons to various scenes: Connection, Preferences, Accounts</li>
